--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <li>Thing 3</li>
       </ul>
     </section>
-    <a href="otherPage.html">Go To Other Page</a>
+    <a href="page2.html">Go To Other Page</a>
   </body>
 </html>
