--- a/index.html
+++ b/index.html
@@ -1,23 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Home page of Colin Folta">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Home page of Colin Folta" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Colin Folta</title>
-</head>
+  </head>
   <body>
     <h1>Colin Folta</h1>
+    <p>
+      Hey, I'm Colin. I'm based in Austin, TX, USA, although sometimes I work
+      from other places.
+    </p>
+    <p>
+      I'm a front-end engineer and tech lead, and I've developed lots of great
+      apps at my last agency job for both huge companies and startups (<a
+        href="page2.html"
+        >here's a summary</a
+      >).
+    </p>
     <section>
-      <p>I'm something something.</p>
-      <p>Here's some stuff I do</p>
+      <p>Development Values</p>
       <ul>
-        <li>Thing 1</li>
-        <li>Thing 2</li>
-        <li>Thing 3</li>
+        <li>
+          <strong>Collaboration</strong> across functional departments to build
+          the best thing possible.
+        </li>
+        <li>
+          <strong>Planning and Documentation</strong> so everyone knows what to
+          do and how to do it.
+        </li>
+        <li>
+          <strong>Code Readability and Consistency</strong> so teammates can see
+          what I did and build on it quickly.
+        </li>
       </ul>
     </section>
-    <a href="page2.html">Go To Other Page</a>
+    <section>
+      <p>
+        When I'm not leading software projects, you can find me doing all sorts
+        of fun stuff.
+      </p>
+      <ul>
+        <li>Windsurfing, scuba, and free-diving</li>
+        <li>Gymnastics strength training and bouldering</li>
+        <li>Crossword and logic puzzles</li>
+      </ul>
+    </section>
+    <section>
+      <p>See more of me here</p>
+      <ul>
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/colinfolta"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          <a target="_blank" href="https://www.github.com/rocktacular"
+            >Github</a
+          >
+        </li>
+      </ul>
+    </section>
+    <p>
+      If you'd like to say hi, just send me an email:
+      <em>first.last@gmail.com</em>
+    </p>
   </body>
 </html>
