update home page. add image.

--- a/index.html
+++ b/index.html
@@ -8,48 +8,50 @@
     <title>Colin Folta</title>
   </head>
   <body>
-    <h1>Colin Folta</h1>
-    <p>
-      Hey, I'm Colin. I'm based in Austin, TX, USA, although sometimes I work
-      from other places.
-    </p>
-    <p>
-      I'm a front-end engineer and tech lead, and I've developed lots of great
-      apps at my last agency job for both huge companies and startups (<a
-        href="page2.html"
-        >here's a summary</a
-      >).
-    </p>
+    <div class="header">
+      <h1>Colin Folta</h1>
+      <img src="DSC03221_small.jpg" class="block" />
+    </div>
     <section>
-      <p>Development Values</p>
+      <p>
+        Hey, I'm Colin. I'm based in Austin, TX, USA, although sometimes I work
+        from other places.
+      </p>
+      <p>
+        I'm a front-end engineer and tech lead, and I've developed lots of great
+        apps at my last agency job for both huge companies and startups (<a
+          href="page2.html"
+          >here's a summary</a
+        >).
+      </p>
+    </section>
+    <section class="bg-color">
+      <p><em>My Development Values</em></p>
       <ul>
         <li>
           <strong>Collaboration</strong> across functional departments to build
-          the best thing possible.
+          the best experience possible.
         </li>
         <li>
-          <strong>Planning and Documentation</strong> so everyone knows what to
-          do and how to do it.
+          <strong>Planning & Documentation</strong> so everyone knows what to do
+          and how to do it.
         </li>
         <li>
-          <strong>Code Readability and Consistency</strong> so teammates can see
-          what I did and build on it quickly.
+          <strong>Code Readability & Consistency</strong> so teammates can
+          understand what we did and build on it quickly.
         </li>
       </ul>
     </section>
     <section>
       <p>
-        When I'm not leading software projects, you can find me doing all sorts
-        of fun stuff.
+        When I'm not leading software projects, I enjoy physical activities like
+        bouldering and calisthenics. I love the ocean, so I travel to windsurf,
+        scuba, and free-dive. And when I just want a quiet morning with tea, I
+        do crosswords and logic puzzles.
       </p>
-      <ul>
-        <li>Windsurfing, scuba, and free-diving</li>
-        <li>Gymnastics strength training and bouldering</li>
-        <li>Crossword and logic puzzles</li>
-      </ul>
     </section>
-    <section>
-      <p>See more of me here</p>
+    <section class="bg-color">
+      <p><em>See more of me here</em></p>
       <ul>
         <li>
           <a target="_blank" href="https://www.linkedin.com/in/colinfolta"
