agency experience page

--- a/page2.html
+++ b/page2.html
@@ -1,14 +1,165 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="second page">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="second page" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Colin Folta</title>
-</head>
+  </head>
   <body>
-    <h1>Second Page</h1>
-    <a href="index.html">Go Home</a>
+    <div class="header">
+      <h1>Past Projects</h1>
+      <a href="index.html">go back</a>
+    </div>
   </body>
+  <section>
+    <p>
+      My first 5 years of programming were at a digital agency here in Austin.
+      We made apps for clients big and small, involving all functions: design,
+      front-end, back-end (sometimes), and QA.
+    </p>
+    <p>
+      Without sharing company names, here's a quick summary of the things I
+      worked on.
+    </p>
+  </section>
+
+  <section class="bg-color">
+    <p>
+      <strong>Startup European Car Subscription (2019-2020)</strong>
+    </p>
+    <p>
+      B2C Native App: Browse and reserve a long-term rental vehicle
+    </p>
+    <ul>
+      <li>
+        Vehicle gallery to present car details with advanced filtering
+      </li>
+      <li>
+        Reserve a car using complex business logic across user type, car type,
+        and add-ons
+      </li>
+      <li>Pickup or dropoff a car via designated flows</li>
+      <li>Tools: React Native, Mobx</li>
+    </ul>
+  </section>
+
+  <section class="bg-color">
+    <p>
+      <strong>Startup Courier Marketplace (2018-2019)</strong>
+    </p>
+    <p>
+      B2B Desktop App: Connect shippers with drivers to deliver packages
+      same-day or next-day
+    </p>
+    <ul>
+      <li>
+        Shipping dashboard to view and manage shipments
+      </li>
+      <li>
+        Wizard to step through shipment creation/editing implementing complex
+        business logic
+      </li>
+      <li>Unauth package tracking for recipient</li>
+      <li>Tools: Angular 4, Redux, Firebase Cloud Messaging</li>
+    </ul>
+  </section>
+
+  <section class="bg-color">
+    <p>
+      <strong>$6B/yr Construction Materials Manufacturer (2018)</strong>
+    </p>
+    <p>
+      B2B Desktop App: Configure cabling specs and requirements to automatically
+      submit for a quote to vendor
+    </p>
+    <ul>
+      <li>
+        Configurator to add/manage cabling across multiple reels using vendor’s
+        business logic
+      </li>
+      <li>
+        Submit configuration to vendor API for quote, by converting local schema
+        to vendor-required schema
+      </li>
+      <li>Tools: React, Redux, Firebase Firestore</li>
+    </ul>
+  </section>
+
+  <section class="bg-color">
+    <p>
+      <strong>Major American Sports League (2017)</strong>
+    </p>
+    <p>
+      B2C Native App: Coaching plans for youth leagues
+    </p>
+    <ul>
+      <li>Browse training plans for 4 skill levels</li>
+      <li>
+        View each practice detail for a whole season, including drills with
+        videos and diagrams
+      </li>
+      <li>Search and browse bonus drills across entire library</li>
+      <li>Tools: React Native, MobX</li>
+    </ul>
+  </section>
+
+  <section class="bg-color">
+    <p>
+      <strong>Local Hair Salon Chain (2017)</strong>
+    </p>
+    <p>
+      B2B Native App: Browse locations, stylists, and times to book a
+      reservation
+    </p>
+    <ul>
+      <li>Browse locations via a list or map</li>
+      <li>
+        Dynamically select styist and available times
+      </li>
+      <li>Select services from extensive menu and estimate time requirement</li>
+      <li>Tools: React Native</li>
+    </ul>
+  </section>
+
+  <section class="bg-color">
+    <p>
+      <strong>$1B/yr Chemicals Manufacturer (2016-2017)</strong>
+    </p>
+    <p>
+      B2C Hybrid App: Test, maintain, and balance your pool chemicals
+    </p>
+    <ul>
+      <li>
+        Pool analysis engine to recommend product formulas and amounts to
+        achieve proper pool balance
+      </li>
+      <li>
+        View past test result graphs
+      </li>
+      <li>Browse pool tips/advice and products</li>
+      <li>Tools: Cordova/PhoneGap, Parse</li>
+    </ul>
+  </section>
+
+  <section class="bg-color">
+    <p>
+      <strong>$9B/yr Agricultural Equipment Manufacturer (2015-2016)</strong>
+    </p>
+    <p>
+      B2B Desktop App: Manage and monitor equipment status and health in a
+      single place
+    </p>
+    <ul>
+      <li>Dashboard to view summarized equipment status and health alerts</li>
+      <li>
+        View equipment details for time series graphs of vehicle operating data
+        and map of current location and path
+      </li>
+      <li>Manage equipment alerts for geofences, maintenance, etc...</li>
+      <li>Served in 10+ languages</li>
+      <li>Tools: Angular 1 (AngularJS)</li>
+    </ul>
+  </section>
 </html>
