change name of page2.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>
         I'm a front-end engineer and tech lead, and I've developed lots of great
         apps at my last agency job for both huge companies and startups (<a
-          href="page2.html"
+          href="agency-projects.html"
           >here's a summary</a
         >).
       </p>
