change format of card

--- a/agency-projects.html
+++ b/agency-projects.html
@@ -28,6 +28,8 @@
   <section class="bg-color">
     <p>
       <strong>Startup European Car Subscription (2019-2020)</strong>
+      <br />
+      <em>React Native, Mobx</em>
     </p>
     <p>
       B2C Native App: Browse and reserve a long-term rental vehicle
@@ -41,13 +43,14 @@
         and add-ons
       </li>
       <li>Pickup or dropoff a car via designated flows</li>
-      <li>Tools: React Native, Mobx</li>
     </ul>
   </section>
 
   <section class="bg-color">
     <p>
       <strong>Startup Courier Marketplace (2018-2019)</strong>
+      <br />
+      <em>Angular 4, Redux, Firebase Cloud Messaging</em>
     </p>
     <p>
       B2B Desktop App: Connect shippers with drivers to deliver packages
@@ -62,13 +65,14 @@
         business logic
       </li>
       <li>Unauth package tracking for recipient</li>
-      <li>Tools: Angular 4, Redux, Firebase Cloud Messaging</li>
     </ul>
   </section>
 
   <section class="bg-color">
     <p>
       <strong>$6B/yr Construction Materials Manufacturer (2018)</strong>
+      <br />
+      <em>React, Redux, Firebase Firestore</em>
     </p>
     <p>
       B2B Desktop App: Configure cabling specs and requirements to automatically
@@ -83,13 +87,14 @@
         Submit configuration to vendor API for quote, by converting local schema
         to vendor-required schema
       </li>
-      <li>Tools: React, Redux, Firebase Firestore</li>
     </ul>
   </section>
 
   <section class="bg-color">
     <p>
       <strong>Major American Sports League (2017)</strong>
+      <br />
+      <em>React Native, MobX</em>
     </p>
     <p>
       B2C Native App: Coaching plans for youth leagues
@@ -101,13 +106,14 @@
         videos and diagrams
       </li>
       <li>Search and browse bonus drills across entire library</li>
-      <li>Tools: React Native, MobX</li>
     </ul>
   </section>
 
   <section class="bg-color">
     <p>
       <strong>Local Hair Salon Chain (2017)</strong>
+      <br />
+      <em>React Native</em>
     </p>
     <p>
       B2B Native App: Browse locations, stylists, and times to book a
@@ -119,13 +125,14 @@
         Dynamically select styist and available times
       </li>
       <li>Select services from extensive menu and estimate time requirement</li>
-      <li>Tools: React Native</li>
     </ul>
   </section>
 
   <section class="bg-color">
     <p>
       <strong>$1B/yr Chemicals Manufacturer (2016-2017)</strong>
+      <br />
+      <em>Cordova/PhoneGap, Parse</em>
     </p>
     <p>
       B2C Hybrid App: Test, maintain, and balance your pool chemicals
@@ -139,13 +146,14 @@
         View past test result graphs
       </li>
       <li>Browse pool tips/advice and products</li>
-      <li>Tools: Cordova/PhoneGap, Parse</li>
     </ul>
   </section>
 
   <section class="bg-color">
     <p>
       <strong>$9B/yr Agricultural Equipment Manufacturer (2015-2016)</strong>
+      <br />
+      <em>Angular 1 (AngularJS)</em>
     </p>
     <p>
       B2B Desktop App: Manage and monitor equipment status and health in a
@@ -159,7 +167,6 @@
       </li>
       <li>Manage equipment alerts for geofences, maintenance, etc...</li>
       <li>Served in 10+ languages</li>
-      <li>Tools: Angular 1 (AngularJS)</li>
     </ul>
   </section>
 </html>
