add new project

--- a/agency-projects.html
+++ b/agency-projects.html
@@ -151,6 +151,30 @@
 
   <section class="bg-color">
     <p>
+      <strong>Startup Sports Auction Site (2016)</strong>
+      <br />
+      <em>React, Firebase RTDB, Firebase Functions, Sports Scores API</em>
+    </p>
+    <p>
+      B2B Desktop App: Run an auction to bid on sports players/teams and score
+      the results.
+    </p>
+    <ul>
+      <li>
+        Dashboard to show upcoming games
+      </li>
+      <li>
+        Real-time bidding process for each player on a set schedule
+      </li>
+      <li>
+        Details of each match and how each participant scored based on game
+        results
+      </li>
+    </ul>
+  </section>
+
+  <section class="bg-color">
+    <p>
       <strong>$9B/yr Agricultural Equipment Manufacturer (2015-2016)</strong>
       <br />
       <em>Angular 1 (AngularJS)</em>
