add links to MM portfolio

--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
     <section>
       <p>
         Hey, I'm Colin. I'm based in Austin, TX, USA, although sometimes I work
-        from other places.
+        from other places like 🇦🇼 or 🇮🇹.
       </p>
       <p>
         I'm a front-end engineer and tech lead, and I've developed lots of great
-        apps at my last agency job for both huge companies and startups (<a
-          href="agency-projects.html"
-          >here's a summary</a
-        >).
+        apps like
+        <a href="https://mutualmobile.com/work/dribe" target="blank">Dribe</a>,
+        <a
+          href="https://mutualmobile.com/work/southwire-configurator-plus"
+          target="blank"
+          >Southwire</a
+        >, and
+        <a href="https://mutualmobile.com/work/agco-agcommand" target="blank"
+          >AGCO</a
+        >
+        (both huge companies and startups). Here's a more
+        <a href="agency-projects.html">detailed list</a> of projects I've been
+        involved with.
       </p>
     </section>
     <section class="bg-color">
