add more links. add disinfectconnect section.

--- a/agency-projects.html
+++ b/agency-projects.html
@@ -20,14 +20,18 @@
       front-end, back-end (sometimes), and QA.
     </p>
     <p>
-      Without sharing company names, here's a quick summary of the things I
-      worked on.
+      Here's a quick summary of the things I worked on.
     </p>
   </section>
 
   <section class="bg-color">
     <p>
-      <strong>Startup European Car Subscription (2019-2020)</strong>
+      <strong
+        ><a href="https://mutualmobile.com/work/dribe" target="blank"
+          >Startup European Car Subscription</a
+        >
+        (2019-2020)</strong
+      >
       <br />
       <em>React Native, Mobx</em>
     </p>
@@ -70,7 +74,14 @@
 
   <section class="bg-color">
     <p>
-      <strong>$6B/yr Construction Materials Manufacturer (2018)</strong>
+      <strong
+        ><a
+          href="https://mutualmobile.com/work/southwire-configurator-plus"
+          target="blank"
+          >$6B/yr Construction Materials Manufacturer</a
+        >
+        (2018)</strong
+      >
       <br />
       <em>React, Redux, Firebase Firestore</em>
     </p>
@@ -175,7 +186,12 @@
 
   <section class="bg-color">
     <p>
-      <strong>$9B/yr Agricultural Equipment Manufacturer (2015-2016)</strong>
+      <strong
+        ><a href="https://mutualmobile.com/work/agco-agcommand" target="blank"
+          >$9B/yr Agricultural Equipment Manufacturer</a
+        >
+        (2015-2016)</strong
+      >
       <br />
       <em>Angular 1 (AngularJS)</em>
     </p>
