--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
         <a href="https://mutualmobile.com/work/agco-agcommand" target="blank"
           >AGCO</a
         >
-        (both huge companies and startups). Here's a more
+        (case studies). Here's a more
         <a href="agency-projects.html">detailed list</a> of projects I've been
         involved with.
+      </p>
+      <p>
+        🏥 I'm currently helping out at
+        <a href="https://www.disinfectconnect.com">Disinfect Connect</a> to help
+        connect distilleries producing hand sanitizer with hospitals, elder-care
+        facilities, etc... who need disinfectant.
       </p>
     </section>
     <section class="bg-color">
